--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\User\\.conda\\envs\\collegeProject\\python.exe"
+    "python.pythonPath": "/home/shawfamily/anaconda3/envs/WordMaster/bin/python"
 }
